# AtividadeProcessamentoGrafico

./: README.md
TriangulosDinamicos/: CMakeLists.txt
TriangulosDinamicos/shaders/: shader.vert
TriangulosDinamicos/src/: main.cpp
